[package]
name = "dafOS_mobile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.10"
pic8259 = "0.10.4"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
#panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
#panic = "abort" # disable stack unwinding on panic

[build]
target = "dafOS_mobile_target_triple.json"
